0.6.0.3

  * Fixed snprintf size with forwardmsg in server.c
  * Free forwardmsg in miauc.c:escape
  * Added an option to define time between forwardmsg commits


0.6.0.2

  * Hopefully fix problems configure switches for once and for all.
  * Fix quicklog timestamping.
  * Change quicklog to use list.[ch] instead of obsolete llist.[ch]


0.6.0.1

  * Don't compile irc.c with DEBUG by default :-P


0.6.0 - "only 18446744073709551615 bugs remaining"

  * Security review. Secured tons of sprintfs and strcats.
  * Option "autoaway" to define when to set user away if ever
  * Option "chandiscon" to define what to do with channels when server
    drops the connection
  * Option not to redirect stdout into logfile
  * miau should finally get along with safe channels (#1245923)
  * "miau" no longer thinks it was kicked off a channel when "miau_" is kicked
  * Fix searching for channels
  * Changed ignore-list to be case insensitive
  * Fixed logging of modeless channels
  * Fixed illegal memory access at parting channel when chanlog compiled in
  * Fixed minor memory leak in rehash
  * Fixed nick rotation
  * Fixed sample-miaurc
  * Fixed nick comparison to be case insensitive at PART & KICK
  * Cleaned up client.c
  * Removed duplicated code in several places
  * Cleaned up extrn-stuff, includes, headers
  * Reworked configure.ac. Expect trouble.
  * Compiles on every single *NIX I could get my hands on.


0.5.4-p3 - "compatible catnap"

  * Fixed b0rken -c switch (crypt password)
  * Fixed qlog timestamp duplication
  * Fixed illegal memory access at nick generation (totally random)


0.5.4-p2 - "compatible catnap"

  * Use socklen_t (with automatic typedef for systems such as HPUX)
  * No more -O2 by default. Portability...
  * del_ignorebynumber (of ignore.c) now static, like prototype suggests.
  * hstrerror should no longer cause trouble on Digital UNIX. Keep your
    thumbs up!


0.5.4-p1 - "compatible catnap"
